log
Fri 21 Apr 2023 04:15:23 AM UTC: 
 tests:  1|8
total_score: 0/70
005b3fe
Fri 21 Apr 2023 04:32:24 AM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
9e19944
Fri 21 Apr 2023 04:32:52 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
cac5ae2
Fri 21 Apr 2023 04:42:18 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  4|7
total_score: 5/70
5a93e65
Fri 21 Apr 2023 04:47:03 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:16: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   82 |       printf("%d",tree->current->pair->key);
      |               ~^  ~~~~~~~~~~~~~~~~~~~~~~~~
      |                |                     |
      |                int                   void *
      |               %p
cc1: all warnings being treated as errors
Compilation failed
b48fd9d
Fri 21 Apr 2023 04:48:41 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:5: error: expected ‘,’ or ‘;’ before ‘if’
   81 |     if(resultado==1)
      |     ^~
treemap.c:85:5: error: ‘else’ without a previous ‘if’
   85 |     else if(resultado==0){
      |     ^~~~
Compilation failed
101b065
Fri 21 Apr 2023 04:48:52 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ba5a55a
Fri 21 Apr 2023 04:50:33 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
1eb7908
Fri 21 Apr 2023 05:04:18 AM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  13|5
total_score: 25/70
d5b7436
Fri 21 Apr 2023 05:10:07 AM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  15|4
total_score: 25/70
d8de1ac
Fri 21 Apr 2023 05:21:01 AM UTC: 
 treemap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
3e21f6f
Fri 21 Apr 2023 05:22:07 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
250cc6d
Fri 21 Apr 2023 05:26:49 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0dfc383
Fri 21 Apr 2023 05:28:03 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:128:22: error: expected ‘;’ before ‘if’
  128 |     printf("HOLAAAA")
      |                      ^
      |                      ;
  129 |     if(r==1){
      |     ~~                
treemap.c:127:9: error: unused variable ‘r’ [-Werror=unused-variable]
  127 |     int r=tree->lower_than(node->pair->key,aux->pair->key);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
ce5b3c2
Fri 21 Apr 2023 05:28:22 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5aa4988
Fri 21 Apr 2023 05:28:43 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7adad8b
Fri 21 Apr 2023 05:29:28 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
49bed42
Fri 21 Apr 2023 05:30:55 AM UTC: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
6e2adfe
Fri 21 Apr 2023 05:31:09 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:127:15: error: unused variable ‘aux’ [-Werror=unused-variable]
  127 |     TreeNode *aux=node->parent;
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
c72d1a6
Fri 21 Apr 2023 05:31:23 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
28c35ba
Fri 21 Apr 2023 05:36:15 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:139:7: error: ‘aux’ undeclared (first use in this function)
  139 |       aux->left=node->left;
      |       ^~~
treemap.c:139:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
724c5e6
Fri 21 Apr 2023 05:36:51 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
80b8fec
Fri 21 Apr 2023 05:39:15 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d6e11ba
Fri 21 Apr 2023 05:42:59 AM UTC: 
 treemap.c | 21 +++++----------------
 1 file changed, 5 insertions(+), 16 deletions(-)
 tests:  16|4
total_score: 30/70
9472205
Fri 21 Apr 2023 05:43:38 AM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  16|4
total_score: 30/70
3fda931
Fri 21 Apr 2023 05:44:33 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  16|4
total_score: 30/70
70912ec
Fri 21 Apr 2023 05:49:11 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
9709b11
Fri 21 Apr 2023 05:50:42 AM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:138:30: error: expected ‘;’ before ‘return’
  138 |         node->right->parent=u
      |                              ^
      |                              ;
  139 |         return;
      |         ~~~~~~                
Compilation failed
7e80b3b
Fri 21 Apr 2023 05:52:14 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
256a381
Fri 21 Apr 2023 05:53:31 AM UTC: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  0|0
883cdfc
Fri 21 Apr 2023 06:02:01 AM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
01c9581
Fri 21 Apr 2023 06:04:21 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
3f6e961
Fri 21 Apr 2023 06:07:02 AM UTC: 
 treemap.c | 20 +++++++++-----------
 1 file changed, 9 insertions(+), 11 deletions(-)
 tests:  0|0
3315886
Fri 21 Apr 2023 06:08:50 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
4708209
Fri 21 Apr 2023 06:10:58 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0f3cc9b
Fri 21 Apr 2023 06:14:13 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
6099f0d
Fri 21 Apr 2023 06:15:55 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c784402
Fri 21 Apr 2023 06:17:05 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7fa4ec4
Fri 21 Apr 2023 06:17:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
11e2c55
Fri 21 Apr 2023 06:18:48 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
9feb1a3
Fri 21 Apr 2023 06:24:35 AM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
ce4861b
Fri 21 Apr 2023 06:29:43 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  17|4
total_score: 35/70
d6c09bb
Sat 22 Apr 2023 12:24:08 AM UTC: 
 treemap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:169:23: error: called object ‘minimum’ is not a function or function pointer
  169 |     TreeNode *minimum=minimum(x);
      |                       ^~~~~~~
treemap.c:169:15: note: declared here
  169 |     TreeNode *minimum=minimum(x);
      |               ^~~~~~~
Compilation failed
8d8b01d
Sat 22 Apr 2023 12:25:10 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  17|4
total_score: 35/70
69dcaf4
Sat 22 Apr 2023 12:26:58 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  17|4
total_score: 35/70
354d494
Sat 22 Apr 2023 12:29:52 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  17|4
total_score: 35/70
611d810
Sat 22 Apr 2023 12:30:24 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:179:1: error: expected identifier or ‘(’ before ‘}’ token
  179 | }
      | ^
Compilation failed
3367890
Sat 22 Apr 2023 12:30:32 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
dc2d3d3
